# BAPAO

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml
examples/: thermal_ald_experimental_data.ipynb
examples/example_data/: TMA_Puurunen_1.csv  TMA_Puurunen_2.csv  TMA_Puurunen_3.csv  sources.txt
src/BAPAO/: __init__.py  _version.py  architectures.py  constraints.py  fitter.py  likelihoods.py  mcmc.py  parameters.py  physics.py  plotting.py  presets.py  priors.py  registry.py  surrogates.py  utils.py
src/BAPAO/models/: model_final_lbfgs_dnn_desorp.weights.h5  model_final_lbfgs_dnn_desorp_cvd.weights.h5  model_final_lbfgs_dnn_desorp_recomb.weights.h5  model_final_lbfgs_dnn_desorp_recomb_cvd.weights.h5  model_final_lbfgs_dnn_plasma.weights.h5  model_final_lbfgs_dnn_plasma_cvd.weights.h5  model_final_lbfgs_dnn_thermal.weights.h5  model_final_lbfgs_dnn_thermal_cvd.weights.h5
